--- a/style.css
+++ b/style.css
@@ -1,70 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Inter', Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: whitesmoke;
+}
+h2 {
     text-align: center;
-    padding-top: 100px;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 80px auto;
-    padding: 0 20px;
-  }
-  
-  h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-
-  .no{
-    background-color: red;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  #message{
-    margin-top: 20px;
-  }
-
-  #confetti-canvas{
-    position: absolute;
-    top:0;
-    left: 0;
+    font-size: 3em;
+    color: #e94d58;
+    margin: 15px 0;
+}
+.btn-group {
     width: 100%;
-    z-index: -10;
-  }
-  
-  button {
-    background-color: #4CAF50;
-    border: none;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+button {
+    position: absolute;
+    width: 150px;
+    height: inherit;
     color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 20px;
+    font-size: 1.2em;
+    border-radius: 30px;
+    outline: none;
     cursor: pointer;
-    border-radius: 4px;
-  }
-
-  footer{
-    margin-top: 200px;
-  }
-  
-  @media (max-width: 768px) {
-    body {
-      padding-top: 50px;
-    }
-  
-    h1 {
-      font-size: 23px;
-      margin-bottom: 10px;
-    }
-  
-    button {
-      padding: 8px 16px;
-      font-size: 14px;
-      margin-top: 10px;
-    }
-  }
-  
+    box-shadow: 0 2px 4px gray;
+    border: 2px solid #e94d58;
+    font-size: 1.2em;
+}
+button:nth-child(1) {
+    margin-left: -200px;
+    background: #e94d58;
+}
+button:nth-child(2) {
+    margin-right: -200px;
+    background: white;
+    color: #e94d58;
+}
